# update-sync-rs

./: Cargo.toml  README.md
update-sync/: Cargo.toml
update-sync/src/: lib.rs
update-sync_derive/: Cargo.toml
update-sync_derive/src/: lib.rs
update-sync_test/: Cargo.toml
update-sync_test/src/: demo.rs  lib.rs
