[package]
name        = "update-sync"
version     = "0.1.0"
authors     = ["Lucille L. Blumire <lucy@llblumire.co.uk>"]
edition     = "2018"
license     = "MIT OR Apache-2.0"
description = "Provides a trait and implementations for diff based syncronisation"

[features]
default = []
derive  = ["update-sync_derive"]

[dependencies]
update-sync_derive = { version = "0.1.0", optional = true }
