[package]
name        = "update-sync_derive"
version     = "0.1.0"
authors     = ["Lucille L. Blumire <lucy@llblumire.co.uk>"]
edition     = "2018"
license     = "MIT or Apache-2.0"
description = "Derive macros for `update-sync`. DO NOT CONSUME DIRECTLY"
repository  = "https://github.com/LLBlumire/update-sync-rs/"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1"
syn         = { version = "1", features = ["full"] }
quote       = "1"
