[package]
name    = "update-sync_test"
version = "0.1.0"
authors = ["Lucille L. Blumire <lucy@llblumire.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
update-sync = { path = "../update-sync", features = ["derive"] }
